// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component matches open snapshot 1`] = `
<div
  className="css-1s1haim"
  layer="2"
  position="relative"
>
  <div
    className="css-4rodaq"
    onClick={[Function]}
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-1wl0vcq"
  >
    <div
      className="css-97bura"
      data-testid="breath-player"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-1uugaji"
        style={
          Object {
            "borderRadius": "30vh",
            "height": "30vh",
            "left": "50%",
            "marginLeft": "-15vh",
            "marginTop": "-15vh",
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": "30vh",
          }
        }
      />
      <div
        className="css-1o44dsb"
        style={
          Object {
            "borderRadius": "30vh",
            "height": "30vh",
            "left": "50%",
            "marginLeft": "-15vh",
            "marginTop": "-15vh",
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": "30vh",
          }
        }
      />
      <div
        className="css-ykw1nj"
        style={Object {}}
      >
        <h2
          className="css-j5os12"
        >
          Breathe in
        </h2>
      </div>
      <div
        className="css-ykw1nj"
        style={
          Object {
            "opacity": 0,
            "transform": "scale(1.1)",
          }
        }
      >
        <h2
          className="css-j5os12"
        >
          Breathe out
        </h2>
      </div>
      <h4
        className="css-1r3e8hh"
      >
        5
      </h4>
      <div
        className="css-cejex2"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
            "transform": "scale(1.1)",
          }
        }
      >
        <div
          className="css-1rr4qq7"
        />
        <div
          className="css-1rr4qq7"
        />
      </div>
    </div>
  </div>
  <div
    className="css-79elbk"
  >
    <div
      className="css-4pw2fe"
    >
      <span
        className="css-xrmt9z"
      >
        <div
          className="css-1as2nky"
        />
        <div
          className="css-91tplw"
        >
          Take a break
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Header component matches snapshot 1`] = `
<div
  className="css-1s1haim"
  layer="2"
  position="relative"
>
  <div
    className="css-1kyoofh"
    onClick={[Function]}
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-13u4gsy"
  >
    <div
      className="css-1y63kkb"
      data-testid="breath-player"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-1uugaji"
        style={
          Object {
            "borderRadius": 80,
            "height": 40,
            "left": "50%",
            "marginLeft": -20,
            "marginTop": -20,
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": 40,
          }
        }
      />
      <div
        className="css-1o44dsb"
        style={
          Object {
            "borderRadius": 80,
            "height": 40,
            "left": "50%",
            "marginLeft": -20,
            "marginTop": -20,
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": 40,
          }
        }
      />
    </div>
  </div>
  <div
    className="css-79elbk"
  >
    <div
      className="css-4pw2fe"
    >
      <span
        className="css-xrmt9z"
      >
        <div
          className="css-1as2nky"
        />
        <div
          className="css-91tplw"
        >
          Take a break
        </div>
      </span>
    </div>
  </div>
</div>
`;
